fix(style): wrong vertical align in navbar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -117,6 +117,7 @@ button:focus,
   .flex-center {
     @apply justify-center;
     @apply items-center;
+    @apply align-middle;
   }
 
   .bg-checkboard {
